tests/miniJava/pos/001303_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { while ( this ) java [ 0 ] = 0 ; } }
