tests/miniJava/neg/003153_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java [ 0 ] class java { public static void Main ( String [ ] java ) { { } } } 0 ; } }
